--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.3",
+    "@tensorflow/tfjs-node": "^3.17.0",
+    "@tensorflow/tfjs-vis": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "bull": "^4.8.3",
     "heroku": "^7.60.2",
