--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "bcryptjs": "^2.4.3",
     "bull": "^4.8.3",
     "heroku": "^7.60.2",
+    "ml-cart": "^2.1.1",
+    "ml-knn": "^3.0.0",
+    "ml-random-forest": "^2.1.0",
+    "ml-regression-simple-linear": "^2.0.3",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
