some demo changes

--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "bcryptjs": "^2.4.3",
     "bull": "^4.8.3",
     "heroku": "^7.60.2",
-    "ml-cart": "^2.1.1",
-    "ml-random-forest": "^2.1.0",
-    "ml-regression-multivariate-linear": "^2.0.3",
+    "ml-cart": "2.1.1",
+    "ml-random-forest": "2.1.0",
+    "ml-regression-multivariate-linear": "2.0.3",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
